log
Sun 24 Mar 2024 12:10:20 AM UTC: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  1|4
total_score: 10/70
817a9a7
Sun 24 Mar 2024 12:11:09 AM UTC: 
 exercises.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  2|3
total_score: 20/70
6ad05b4
Sun 24 Mar 2024 12:11:51 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|2
total_score: 40/70
810cdbe
Sun 24 Mar 2024 12:16:50 AM UTC: 
 exercises.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:106:13: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
  106 |     while (!is_empty(P1)) {
      |             ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8967fab
Sun 24 Mar 2024 12:19:34 AM UTC: 
 exercises.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:130:17: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
  130 |             if (is_empty(pila)) {
      |                 ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a8140ab
Sun 24 Mar 2024 12:20:24 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:130:24: error: ‘P1’ undeclared (first use in this function); did you mean ‘y1’?
  130 |             while (top(P1) != NULL) {
      |                        ^~
      |                        y1
exercises.c:130:24: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:132:22: error: ‘aux’ undeclared (first use in this function)
  132 |                 push(aux, dato);
      |                      ^~~
exercises.c:138:23: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
  138 |     int balanceados = is_empty(pila);
      |                       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2cb9245
Sun 24 Mar 2024 12:21:31 AM UTC: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  7|1
total_score: 60/70
c1d776c
Sun 24 Mar 2024 12:23:59 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
f27fb4b
